k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swa05-service
spec:
  selector:
    app: swa05-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: web
  type: NodePort
